--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,13 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
-
-group = 'ru.serple'
-version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
+    testImplementation(
+         "com.codeborne:selenide:7.8.1"
+    )
 }
