--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ repositories {
 
 dependencies {
     testImplementation(
+         "org.junit.jupiter:junit-jupiter:5.12.1",
          "com.codeborne:selenide:7.8.1"
     )
+}
+
+test {
+    useJUnitPlatform()
 }
