--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ repositories {
 dependencies {
     testImplementation(
          "org.junit.jupiter:junit-jupiter:5.12.1",
-         "com.codeborne:selenide:7.8.1"
+         "com.codeborne:selenide:7.8.1",
+         "org.slf4j:slf4j-simple:2.0.7"
     )
 }
 
